src/snapshots/jk__app__tests__snapshot_renders_workspace_add_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Workspace Add
=================

Summary: 1 output line

Created workspace docs at ../jk-docs

Tip: run `workspace list` to inspect workspace state
