src/snapshots/jk__app__tests__snapshot_renders_workspace_forget_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Workspace Forget
=================

Summary: 1 output line

Forgot workspace docs

Tip: run `workspace list` to inspect workspace state
