src/snapshots/jk__app__tests__snapshot_renders_workspace_rename_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Workspace Rename
=================

Summary: 1 output line

Renamed workspace docs to docs-v2

Tip: run `workspace list` to inspect workspace state
