src/snapshots/jk__app__tests__snapshot_renders_workspace_update_stale_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Workspace Update-stale
=================

Summary: 1 output line

Updated 2 stale workspaces

Tip: run `workspace list` to inspect workspace state
